# scmnote

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac
data/: Makefile.am  Makefile.in  general.str
examples/: Makefile.am  Makefile.in  afraid.sn  channels.sn  chordmerge.sn  comma.sn  controller.sn  duration.sn  gen-Makefile.am  instrument.sn  instrument2.sn  merge2.sn  merger.sn  mergsilly.sn  nestmerge.sn  repeat.sn  simple.sn  tempo.sn  tempo2.sn  tempo3.sn  tempo4.sn  velocity.sn
man/: Makefile.am  Makefile.in  scmnote.1.in
src/: ChannelMessage.hpp  ChannelVoiceMessage.hpp  ControllerChange.cpp  ControllerChange.hpp  EndOfTrackEvent.cpp  EndOfTrackEvent.hpp  EnumController.hpp  EnumDivType.hpp  EnumMetaEvent.hpp  EnumMidiFormat.hpp  EnumModeMessage.hpp  EnumSysexEvent.hpp  EnumVoiceMessage.hpp  HasChannel.hpp  Makefile.am  Makefile.in  MetaEvent.hpp  MidiChunk.hpp  MidiEvent.hpp  MidiFile.cpp  MidiFile.hpp  MidiItem.cpp  MidiItem.hpp  NoteMessage.cpp  NoteMessage.hpp  ProgramChangeMessage.cpp  ProgramChangeMessage.hpp  ScmNote.cpp  ScmNote.hpp  ScmSongStatus.cpp  ScmSongStatus.hpp  TempoEvent.cpp  TempoEvent.hpp  TextMetaEvent.cpp  TextMetaEvent.hpp  TrackChunk.cpp  TrackChunk.hpp  VarInt.cpp  VarInt.hpp  cmdline.c  (+6 more)
