dist_data_DATA = \
	afraid.sn \
	channels.sn \
	chordmerge.sn \
	comma.sn \
	controller.sn \
	duration.sn \
	instrument.sn \
	instrument2.sn \
	merge2.sn \
	merger.sn \
	mergsilly.sn \
	nestmerge.sn \
	note.sn \
	repeat.sn \
	simple.sn \
	tempo.sn \
	tempo2.sn \
	tempo3.sn \
	tempo4.sn \
	velocity.sn \
	gen-Makefile.am
